--- a/eks-deploy-k8s.yaml
+++ b/eks-deploy-k8s.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: my-springboot-app
-        image: 292362026437.dkr.ecr.us-east-1.amazonaws.com/my-docker-repo:latest
+        image: 292362026437.dkr.ecr.us-east-1.amazonaws.com/mydockerrepo:latest
         imagePullPolicy: Always
         ports:
         - containerPort: 8085
